--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Miriam+Libre|Source+Sans+Pro" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Miriam+Libre|Source+Sans+Pro|Gloria+Hallelujah" rel="stylesheet">
   <script src="https://use.fontawesome.com/d9709cee7f.js"></script>
 </head>
 <body>
   <div class="wrapper">
-  <nav class="main-nav">
-    <h1 class="name"><a href="index.html">Sofian Mourabit</a></h1>
-    <ul class="nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-</div>
+    <nav class="main-nav">
+      <h1 class="name"><a href="index.html">Sofian Mourabit</a></h1>
+      <ul class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
   <header id="header" class="main-header">
     <div class="profile">
-    <img class="profile-picture col" alt="profile picture" src="images/responsive-layout-profile.png"/>
-    <p>Hi! I'm a front-end developer who loves responsive design and CSS. I recently finished a degree in front end web development at Treehouse and am excited to put all my skills to use!</p>
+      <img class="profile-picture col" alt="profile picture" src="images/responsive-layout-profile.png"/>
+      <p>Hi! I'm a front-end developer who loves responsive design and CSS. I recently finished a degree in front end web development at Treehouse and am excited to put all my skills to use!</p>
     </div>
   </header>
   <main id="portfolio" class="portfolio row">
@@ -69,8 +69,23 @@
     </div>
   </main>
   <section id="skills" class="skills">
-    <h2>Skills</h2>
-    <img alt="Web Developer skills" src="images/front-end.jpg" />
+      <h2>Skills</h2>
+      <div class="image"><img class="workplace" alt="Web Developer skills" src="images/front-end.jpg" /></div>
+      <div class="skill-list">
+      <h3>Front End Developer</h3>
+      <ul>
+        <li><i class="fa fa-check fa-lg" aria-hidden="true"></i> 3 Years work expierence</li>
+        <li><i class="fa fa-check fa-lg" aria-hidden="true"></i> HTML</li>
+        <li><i class="fa fa-check fa-lg" aria-hidden="true"></i> CSS</li>
+        <li><i class="fa fa-check fa-lg" aria-hidden="true"></i> Javascript</li>
+        <li><i class="fa fa-check fa-lg" aria-hidden="true"></i> jQuery</li>
+        <li><i class="fa fa-check fa-lg" aria-hidden="true"></i> SASS</li>
+        <li><i class="fa fa-check fa-lg" aria-hidden="true"></i> Gulp</li>
+        <li><i class="fa fa-check fa-lg" aria-hidden="true"></i> Bootstrap</li>
+        <li><i class="fa fa-check fa-lg" aria-hidden="true"></i> Git</li>
+        <li><i class="fa fa-check fa-lg" aria-hidden="true"></i> AngularJS</li>
+      </ul>
+    </div>
   </section>
   <section  id="contact" class="contact">
     <h2>Contact</h2>
@@ -79,16 +94,16 @@
     <span>Email <a href="mailto:sofianmourabit@gmail.com?Subject=Let&apos;s%20talk">sofianmourabit@gmail.com</a></span>
   </section>
   <footer class="main-footer">
-    <span class="name">Sofian Mourabit</span>  
+    <span class="name">Sofian Mourabit</span>
     <a class="flywheel" href="#header">Back To Top</a>
     <div class="footer-menu">
-    <ul class="footer-links">
-      <li><a href="#header">Home</a></li>
-      <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </div>
+      <ul class="footer-links">
+        <li><a href="#header">Home</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
   </footer>
 </body>
 </html>
